--- a/src/main/resources/templates/thymeleaf/editPlan.html
+++ b/src/main/resources/templates/thymeleaf/editPlan.html
@@ -29,7 +29,7 @@
             <li><a th:href="@{/am/index}" data-toggle="dropdown" class="dropdown-toggle"> <i
                     class="icon-edit"></i> <span>广告管理</span> <span class="caret"></span> </a></li>
             <li><a th:href="@{/user/acountSetting}" data-toggle="dropdown" class="dropdown-toggle"> <i
-                    class="icon-edit"></i> <span>帐户设置</span> <span class="caret"></span> </a></li>
+                    class="icon-edit"></i> <span>账户设置</span> <span class="caret"></span> </a></li>
             <!--<li><a href="javascript:;" data-toggle="dropdown" class="dropdown-toggle"> <i
                     class="icon-edit"></i> <span>审批申请</span> <span class="caret"></span> </a></li>
             <li><a href="javascript:;" data-toggle="dropdown" class="dropdown-toggle"> <i
