--- a/src/main/resources/templates/thymeleaf/xgbg.html
+++ b/src/main/resources/templates/thymeleaf/xgbg.html
@@ -19,7 +19,7 @@
             <li><a th:href="@{/pm/index}">
                 <i class="icon-edit"></i> <span>计划管理</span><span class="caret"></span></a></li>
             <li><a th:href="@{/am/index}"> <i class="icon-edit"></i> <span>广告管理</span><span class="caret"></span></a></li>
-            <li><a th:href="@{/user/acountSetting}"> <i class="icon-edit"></i><span>帐户设置</span><span class="caret"></span></a></li>
+            <li><a th:href="@{/user/acountSetting}"> <i class="icon-edit"></i><span>账户设置</span><span class="caret"></span></a></li>
             <!--<li><a href="javascript:;" data-toggle="dropdown" class="dropdown-toggle"> <i
                     class="icon-edit"></i> <span>审批申请</span> <span class="caret"></span> </a></li>
             <li><a href="javascript:;" data-toggle="dropdown" class="dropdown-toggle"> <i
