--- a/src/main/resources/templates/thymeleaf/planManage.html
+++ b/src/main/resources/templates/thymeleaf/planManage.html
@@ -217,7 +217,15 @@
                                         <p style="display: none;">已上传头像<span  id="planlogo" style="color: blue;"></span></p>
                                     </td>
                                 </tr>
-
+                                <tr class="add_div">
+                                    <td width="200">是否活动</td>
+                                    <td>
+                                        <select name="status" id="status" style="padding:5px;">
+                                            <option value="0">活动</option>
+                                            <option value="1">未活动</option>
+                                        </select>
+                                    </td>
+                                </tr>
                                 </tbody>
                             </table>
                             <div class="z-next">
