--- a/src/main/resources/templates/thymeleaf/adAdmin.html
+++ b/src/main/resources/templates/thymeleaf/adAdmin.html
@@ -109,9 +109,10 @@
         <table class="table-6uc" border="0" cellpadding="0" cellspacing="0">
             <tbody>
             <tr class="first">
-                <td width="20%"><span class="money useMoney" th:text="${usemoney}">0.0</span>元</td>
-                <td width="20%"><span class="money" th:text="${yesterday}">0.0</span>元</td>
-                <td width="20%"><span class="money" th:text="${currentMonth}">0.0</span>元</td>
+                <td width="15%"><span class="money useMoney" th:text="${usemoney}">0.0</span>元</td>
+                <td width="15%"><span class="money" th:text="${todayuse}">0.0</span>元</td>
+                <td width="15%"><span class="money" th:text="${yesterday}">0.0</span>元</td>
+                <td width="15%"><span class="money" th:text="${currentMonth}">0.0</span>元</td>
                 <td width="20%">
                     <span class="money blananceMoney" th:if="${userAcount != empty}" th:text="${blanance}"></span>
                     <span class="money" th:if="${userAcount == empty}">0.00</span>元
@@ -121,6 +122,7 @@
                 </td>
             </tr>
             <tr>
+                <td><span class="border-top">实时消耗</span></td>
                 <td><span class="border-top">当日消耗</span></td>
                 <td><span class="border-top">昨日消耗</span></td>
                 <td><span class="border-top">当月消耗</span></td>
@@ -138,7 +140,7 @@
             <tr class="last">
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
-                <td>
+                <td colspan="2">
                     <span th:if="${currentUser.isSuperadmin == 1}"><input type="text" readonly="readonly" class="setspeed btn btn-red do_speed" placeholder="设置速率" th:value="${userAcount.spendSpeed}">元/秒<span style="font-size: 10px;">(？点击数字设置速率)</span></span>
                 </td>
                 <td>
